OKD Doc Changes

--- a/scripts/arch-linux-service/DNS-Server/named.conf
+++ b/scripts/arch-linux-service/DNS-Server/named.conf
@@ -1,142 +1,143 @@
-// Command used to open this DNS configuration file in the vim editor
+# Command used to open this DNS configuration file in the vim editor
 
-// named.conf
-// Main configuration file for BIND (named) DNS server
-// This file controls how DNS behaves, who can query it,
-// and which DNS zones (domains) this server owns.
+# named.conf
+# Main configuration file for BIND (named) DNS server
+# This file controls how DNS behaves, who can query it,
+# and which DNS zones (domains) this server owns.
 
 options {
-  // Listen for DNS requests on port 53 (standard DNS port)
-  // 127.0.0.1  -> allow DNS queries from this machine itself
-  // 10.0.0.100 -> allow DNS queries from the LAN interface
-  listen-on port 53 { 127.0.0.1; 10.0.0.100; };
+  # Listen for DNS requests on port 53 (standard DNS port)
+  # 127.0.0.1  -> allow DNS queries from this machine itself
+  # 10.0.0.100 -> allow DNS queries from the LAN interface
+  listen-on port 53 { 127.0.0.1; 10.0.0.1; };
+  listen-on-v6 { none; };
 
-  // Base directory where zone files and DNS data are stored
+  # Base directory where zone files and DNS data are stored
   directory "/var/named";
 
-  // File where DNS cache can be dumped for debugging
+  # File where DNS cache can be dumped for debugging
   dump-file "/var/named/data/cache_dump.db";
 
-  // File where DNS runtime statistics are written
+  # File where DNS runtime statistics are written
   statistics-file "/var/named/data/named_stats.txt";
 
-  // File where DNS memory usage statistics are written
+  # File where DNS memory usage statistics are written
   memstatistics-file "/var/named/data/named_mem_stats.txt";
 
-  // File used internally for DNSSEC secure root tracking
+  # File used internally for DNSSEC secure root tracking
   secroots-file "/var/named/data/named.secroots";
 
-  // File tracking which recursive queries are in progress
+  # File tracking which recursive queries are in progress
   recursing-file "/var/named/data/named.recursing";
 
-  // Who is allowed to ask DNS questions
-  // localhost -> this server
-  // 10.0.0.0/24 -> all machines in LAN subnet
+  # Who is allowed to ask DNS questions
+  # localhost -> this server
+  # 10.0.0.0/24 -> all machines in LAN subnet
   allow-query { localhost; 10.0.0.0/24; };
 
-  // Who is allowed to use this DNS server as a recursive resolver
-  // This prevents DNS abuse from outside networks
+  # Who is allowed to use this DNS server as a recursive resolver
+  # This prevents DNS abuse from outside networks
   allow-recursion { localhost; 10.0.0.0/24; };
 
-  // Forward unresolved DNS queries to upstream DNS (usually router)
-  forwarders { 10.0.0.1; };
+  # Forward unresolved DNS queries to upstream DNS (usually router)
+  forwarders { 192.168.8.1; };
 
-  // Enable recursive DNS resolution
-  // If DNS does not know an answer, it will ask upstream servers
+  # Enable recursive DNS resolution
+  # If DNS does not know an answer, it will ask upstream servers
   recursion yes;
 
-  // Enable DNSSEC validation
-  // Verifies DNS responses are cryptographically valid
+  # Enable DNSSEC validation
+  # Verifies DNS responses are cryptographically valid
   dnssec-validation auto;
 
-  // Directory used by BIND to store dynamically managed DNSSEC keys
+  # Directory used by BIND to store dynamically managed DNSSEC keys
   managed-keys-directory "/var/named/dynamic";
 
-  // Directory containing GeoIP databases (optional / advanced use)
+  # Directory containing GeoIP databases (optional / advanced use)
   geoip-directory "/usr/share/GeoIP";
 
-  // File that stores the process ID (PID) of the running named service
+  # File that stores the process ID (PID) of the running named service
   pid-file "/run/named/named.pid";
 
-  // Session key file used internally by BIND
+  # Session key file used internally by BIND
   session-keyfile "/run/named/session.key";
 
-  // Include system-wide crypto policy for BIND (RHEL/Fedora based)
-  // NOTE: If this file does not exist, named-checkconf will fail
-  //include "/etc/crypto-policies/back-ends/bind.config";
+  # Include system-wide crypto policy for BIND (RHEL/Fedora based)
+  # NOTE: If this file does not exist, named-checkconf will fail
+  #include "/etc/crypto-policies/back-ends/bind.config";
 };
 
 logging {
-  // Log DNS zone change notifications
+  # Log DNS zone change notifications
   category notify { zone_transfer_log; };
 
-  // Log incoming zone transfers (AXFR/IXFR)
+  # Log incoming zone transfers (AXFR/IXFR)
   category xfer-in { zone_transfer_log; };
 
-  // Log outgoing zone transfers
+  # Log outgoing zone transfers
   category xfer-out { zone_transfer_log; };
 
-  // Define a logging channel named "zone_transfer_log"
+  # Define a logging channel named "zone_transfer_log"
   channel zone_transfer_log {
 
-      // Log file location
-      // versions 10 -> keep last 10 rotated files
-      // size 50m -> rotate when file reaches 50MB
+      # Log file location
+      # versions 10 -> keep last 10 rotated files
+      # size 50m -> rotate when file reaches 50MB
       file "/var/named/log/transfer.log" versions 10 size 50m;
 
-      // Add timestamp to log entries
+      # Add timestamp to log entries
       print-time yes;
 
-      // Add log category name
+      # Add log category name
       print-category yes;
 
-      // Add severity level (info, warning, etc.)
+      # Add severity level (info, warning, etc.)
       print-severity yes;
 
-      // Minimum severity to log
+      # Minimum severity to log
       severity info;
     };
 };
 
-//
-// Forward DNS zone: okdcls.ms1.lan
-// Typically used for cluster-specific naming
-//
+#
+# Forward DNS zone: okdcls.ms1.lan
+# Typically used for cluster-specific naming
+#
 zone "okd.ms1.lan" {
     type master;
 
-    // Zone file containing records for okdcls.ms1.lan
+    # Zone file containing records for okdcls.ms1.lan
     file "/var/named/okd.ms1.lan.zone";
 
     allow-query { localhost; 10.0.0.0/24; };
 
-    // Prevent zone replication
+    # Prevent zone replication
     allow-transfer { none; };
 };
 
-//
-// Reverse DNS zone for subnet 10.0.0.0/24
-// Maps IP addresses back to hostnames (PTR records)
-//
-zone "11.168.192.in-addr.arpa" {
+#
+# Reverse DNS zone for subnet 10.0.0.0/24
+# Maps IP addresses back to hostnames (PTR records)
+#
+zone "0.0.10.in-addr.arpa" {
     type master;
 
-    // Reverse zone file (IP -> hostname)
-    file "/var/named/11.168.192.in-addr.arpa.zone";
+    # Reverse zone file (IP -> hostname)
+    file "/var/named/0.0.10.in-addr.arpa.zone";
 
     allow-query { localhost; 10.0.0.0/24; };
 
-    // Disable reverse zone transfers
+    # Disable reverse zone transfers
     allow-transfer { none; };
 };
 
-//
-// Include default RFC1912 local zones (localhost, 127.0.0.1, etc.)
-//
-//include "/etc/named.rfc1912.zones";
+#
+# Include default RFC1912 local zones (localhost, 127.0.0.1, etc.)
+#
+#include "/etc/named.rfc1912.zones";
 
-//
-// Include DNSSEC root trust anchor
-// Required for DNSSEC validation to work
-//
-//include "/etc/named.root.key";
+#
+# Include DNSSEC root trust anchor
+# Required for DNSSEC validation to work
+#
+#include "/etc/named.root.key";
