--- a/scripts/arch-linux-service/HAProxy/haproxy.cfg
+++ b/scripts/arch-linux-service/HAProxy/haproxy.cfg
@@ -40,6 +40,11 @@ defaults
 #---------------------------------------------------------------------
 # round robin balancing between the various backends
 #---------------------------------------------------------------------
+listen stats
+  bind :9000
+  stats uri /stats
+  stats refresh 10000ms
+
 listen api-server-6443 
   bind *:6443
   mode tcp
